ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
01/21/09 Remi Ricard (papaDoc)
         * Fix bug reported by Tilman: dxJointPU::getInfo1 was setting twice the
           limit of limot1 to zero and not limot2

01/17/09 Daniel K. O.
        * Fixed a bug in dSpaceCollide2: if both geoms are not in spaces they would
          not have valid AABBs.

12/20/08 Daniel K. O.
        * New functions: dJointEnable, dJointDisable, dJointIsEnabled
          (patch #2454764).

12/19/08 Daniel K. O.
        * Removed inline asm statements that break builds on 64-bit VC++.

12/09/08 Daniel K. O.
        * Applied patch #2381592, which adds support for Kinematic Bodies.

12/06/08 Oleh Derevenko

       * Applied a patch by Martijn Buijs to make GIMPACT trimesh-ray collisions to
         be consistent with those in OPCODE.
       * Swapped geometries returned in contacts for OPCODE Trimesh-Plane collisions
         as they were returned in unnatural order being different from that in GIMPACT
       * Applied a patch by Martijn Buijs to make side1, side2 fields of contact 
         structure be always initialized, either with -1 for non-trmesh geometries
         or with triangle index for trimeshes. These fields were only assigned for
         trimesh-trimesh collisions before.
       * dGeomTriMeshSetTriMergeCallback/dGeomTriMeshGetTriMergeCallback API added
         to set/get user defined callback procedure for trimeshes that would be 
         invoked when contacts are merged to let user code accumulate attributes of
         original contact triangles and generate a fake index by which it would 
         later be able to determine those attributes. If the callback is not 